<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ZooActivity">

    <androidx.cardview.widget.CardView
        android:layout_marginTop="-30dp"
        app:cardCornerRadius="50dp"
        android:id="@+id/animal"
        app:cardBackgroundColor="#FFF8E1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animals"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textAlignment="center">
        </TextView>
    </androidx.cardview.widget.CardView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/animal"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#FFE6F7"
                android:id="@+id/cat"
                android:clickable="true"
                app:cardCornerRadius="30dp"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_margin="10dp"
                        android:layout_gravity="center"
                        android:src="@drawable/cat"
                        android:contentDescription="TODO">
                    </ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/cat"
                        android:textAlignment="center"
                        android:background="#DFFFD8"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        android:textColor="@color/black">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cow"
                app:cardBackgroundColor="#FFE6F7"
                android:clickable="true"
                app:cardCornerRadius="30dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_margin="10dp"
                        android:layout_gravity="center"
                        android:src="@drawable/cow">
                    </ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/cow"
                        android:background="#DFFFD8"
                        android:textAlignment="center"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        android:textColor="@color/black">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#FFE6F7"
                android:clickable="true"
                android:id="@+id/deer"
                app:cardCornerRadius="30dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_margin="10dp"
                        android:layout_gravity="center"
                        android:src="@drawable/deer">
                    </ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="Deer"
                        android:background="#DFFFD8"
                        android:textAlignment="center"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        android:textColor="@color/black">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#FFE6F7"
                android:clickable="true"
                android:id="@+id/dog"
                app:cardCornerRadius="30dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_margin="10dp"
                        android:layout_gravity="center"
                        android:src="@drawable/dog">
                    </ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/dog"
                        android:background="#DFFFD8"
                        android:textAlignment="center"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        android:textColor="@color/black">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#FFE6F7"
                android:id="@+id/fox"
                android:clickable="true"
                app:cardCornerRadius="30dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_margin="10dp"
                        android:layout_gravity="center"
                        android:src="@drawable/fox"
                        android:contentDescription="TODO">
                    </ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="#DFFFD8"
                        android:text="@string/fox"
                        android:textAlignment="center"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        android:textColor="@color/black">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#FFE6F7"
                android:id="@+id/horse"
                android:clickable="true"
                app:cardCornerRadius="30dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_margin="10dp"
                        android:layout_gravity="center"
                        android:src="@drawable/horse"
                        android:contentDescription="TODO">
                    </ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/horse"
                        android:background="#DFFFD8"
                        android:textAlignment="center"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        android:textColor="@color/black">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#FFE6F7"
                android:clickable="true"
                android:id="@+id/lion"
                app:cardCornerRadius="30dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_margin="10dp"
                        android:layout_gravity="center"
                        android:src="@drawable/lion"
                        android:contentDescription="TODO">
                    </ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/lion"
                        android:background="#DFFFD8"
                        android:textAlignment="center"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        android:textColor="@color/black">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#FFE6F7"
                android:clickable="true"
                android:id="@+id/panda"
                app:cardCornerRadius="30dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_margin="10dp"
                        android:layout_gravity="center"
                        android:src="@drawable/panda"
                        android:contentDescription="TODO">
                    </ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="#DFFFD8"
                        android:text="@string/panda"
                        android:textAlignment="center"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        android:textColor="@color/black">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#FFE6F7"
                android:clickable="true"
                android:id="@+id/tiger"
                app:cardCornerRadius="30dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_margin="10dp"
                        android:layout_gravity="center"
                        android:src="@drawable/tiger"
                        android:contentDescription="@string/todo1">
                    </ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/tiger"
                        android:background="#DFFFD8"
                        android:textAlignment="center"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        android:textColor="@color/black">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#FFE6F7"
                android:clickable="true"
                android:layout_marginBottom="15dp"
                android:id="@+id/zebra"
                app:cardCornerRadius="30dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_margin="10dp"
                        android:layout_gravity="center"
                        android:src="@drawable/zebra"
                        android:contentDescription="@string/todo">
                    </ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/zebra"
                        android:background="#DFFFD8"
                        android:textAlignment="center"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        android:textColor="@color/black">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>