<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-16dp"
        android:id="@+id/titlee"
        app:cardElevation="10dp"
        app:cardBackgroundColor="#FFCDD2"
        app:cardCornerRadius="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ar Learnix"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textColor="@color/black">
        </TextView>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titlee"
        android:id="@+id/profile"
        android:layout_marginLeft="30dp"
        app:cardBackgroundColor="#F9FBE7"
        app:cardElevation="20dp"
        app:cardCornerRadius="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="25dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/profile"
                android:contentDescription="@string/todo3">
            </ImageView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/username"
                    android:text="Name"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="20sp">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/usermail"
                    android:text="Mail"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp">
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:cardElevation="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="20dp"
        android:id="@+id/menu"
        app:cardBackgroundColor="#E7FDF2"
        android:layout_below="@id/profile">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp"
                android:id="@+id/detectpage"
                android:layout_marginTop="15dp"
                android:clickable="true"
                app:cardBackgroundColor="#FFEBEE">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/detect"
                        android:contentDescription="@string/todo4">
                    </ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/objdet"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textColor="@color/black">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp"
                android:id="@+id/zoopage"
                android:clickable="true"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="#FFEBEE">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/zoo"
                        android:contentDescription="@string/todo4">
                    </ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/zoo_park"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textColor="@color/black">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp"
                android:id="@+id/santypage"
                android:clickable="true"
                app:cardBackgroundColor="#FFEBEE">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/santry"
                        android:contentDescription="@string/todo4">
                    </ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sanctuary"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textColor="@color/black">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp"
                android:id="@+id/alphabet"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:clickable="true"
                app:cardBackgroundColor="#FFEBEE">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/abc"
                        android:contentDescription="@string/todo4">
                    </ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Alphabets"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textColor="@color/black">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:clickable="true"
        android:id="@+id/logout"
        app:cardElevation="20dp"
        android:layout_below="@+id/menu"
        app:cardCornerRadius="20dp"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="#EF5350"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="LogOut"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="28sp"/>
    </androidx.cardview.widget.CardView>

</RelativeLayout>